# pytest-deselect-if

./: CHANGELOG.md  README.rst  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: release.yml
docs/: index.md
src/pytest_deselect_if/: __init__.py  plugin.py
tests/: test_deselect_if.py
