[build-system]
requires = [
  "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-deselect-if"
description = "A plugin to deselect pytests tests rather than using skipif"
version = "0.1.1"
readme = "README.rst"
requires-python = ">=3.9"
authors = [
    { name = "Jason Giancono", email = "jasongiancono@gmail.com" },
]
maintainers = [
    { name = "Jason Giancono", email = "jasongiancono@gmail.com" },
]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytest>=6.2.0",
]
[project.urls]
Repository = "https://github.com/jasongi/pytest-deselect-if"

[project.entry-points.pytest11]
pytest_deselect_if = "pytest_deselect_if.plugin"

[tool.mypy]
files = "src"
